--- a/RouletteGameCode/RouletteGameCode.csproj
+++ b/RouletteGameCode/RouletteGameCode.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bets.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="GameTitle.cs" />
+    <Compile Include="Money.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
